--- a/MEDIA_QUERIE/style.css
+++ b/MEDIA_QUERIE/style.css
@@ -7,7 +7,7 @@ font-family: Arial, Helvetica, sans-serif;
 border-bottom: solid 3px black;
 }
 .title{
-    font-size: x-large;
+    font-size: xx-large;
     font-weight: bolder;
 }
 .nav{
@@ -56,12 +56,15 @@ border-bottom: solid 3px black;
 
 }
 .paint-title{
+    font-size: large;
     font-weight: bold;
 }
 .paint-artist{
+    font-size: large;
    font-style: italic;
 }
 .description-text{
+    font-size: large;
     width: 70%;
 }
 
@@ -105,6 +108,13 @@ border-bottom: solid 3px black;
         flex-direction: column;
         align-items: center;
     
+    }
+    .paint-title{
+        font-size: xx-large;
+        
+    }
+    .paint-artist{
+        font-size: xx-large;
     }
     .description-text{
         display: none;
