--- a/MEDIA_QUERIE/style.css
+++ b/MEDIA_QUERIE/style.css
@@ -17,8 +17,8 @@ border-bottom: solid 3px black;
     justify-content: space-evenly;
 }
 .container{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    
 }
 .pintura{
     height: 550px;
@@ -87,7 +87,8 @@ border-bottom: solid 3px black;
 
 @media (max-width:650px){
     .container{
-        width: 100vw;;
+        width: 95vw;
+        align-content: center;
     }
     .pintura, .pintura-2{
         height: 600px;
@@ -95,6 +96,10 @@ border-bottom: solid 3px black;
         flex-direction: column;
         align-items: center;
     }
+    .img-1, .img-2, .img-3{
+        width: 90vw;
+    }
+   
    
     .description{
         display: flex;
