--- a/MEDIA_QUERIE/style.css
+++ b/MEDIA_QUERIE/style.css
@@ -1,10 +1,13 @@
 
 header{
 display: flex;
+background-color: white;
 flex-direction: column;
 align-items: center;
 font-family: Arial, Helvetica, sans-serif;
 border-bottom: solid 3px black;
+position: fixed;
+top: 0
 }
 .title{
     font-size: xx-large;
@@ -16,8 +19,13 @@ border-bottom: solid 3px black;
     padding: 20px 20px;
     justify-content: space-evenly;
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
 .container{
     width: 100%;
+    margin-top: 100px;
     
 }
 .pintura{
@@ -27,6 +35,7 @@ border-bottom: solid 3px black;
     border-bottom: solid 2px black;
     padding: 10px;
     gap: 20px;
+
 }
 .pintura-2{
     height: 550px;
@@ -36,6 +45,7 @@ border-bottom: solid 3px black;
     padding: 10px;
     gap: 20px;
     background-color: rgb(214, 213, 213);
+    
 }
 
 .img-1{
@@ -91,7 +101,7 @@ border-bottom: solid 3px black;
         align-content: center;
     }
     .pintura, .pintura-2{
-        height: 600px;
+        height: 700px;
         display: flex;
         flex-direction: column;
         align-items: center;
