--- a/MEDIA_QUERIE/style.css
+++ b/MEDIA_QUERIE/style.css
@@ -16,6 +16,11 @@ border-bottom: solid 3px black;
     padding: 20px 20px;
     justify-content: space-evenly;
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
 .container{
     width: 100%;
     
